# likelychat

./: .envrc  .gitignore  Justfile  README.md  flyway.conf  pyproject.toml  ruff.toml
config/: example.config.toml
infra/: Dockerfile  docker-compose.yaml
migrations/: V1__create_user.sql
src/: config.py
src/application/auth/: auth_service.py  di.py
src/infra/logger/: logging.py
src/infra/postgres/: di.py
src/infra/postgres/repo/user/: model.py  repository.py
src/main/: __init__.py  di.py  main.py  web.py
src/presentation/: setup.py
src/presentation/auth/: login.py  register.py  validate.py
src/presentation/healthcheck/: get.py
